--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pi-timer",
+  "name": "angular-es6-webpack-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
